[gd_scene load_steps=2 format=3 uid="uid://ci3ekgsxetebd"]

[ext_resource type="Script" uid="uid://chfh45rp3gvps" path="res://scripts/money_area/MoneyArea.gd" id="1_lpres"]

[node name="MoneyArea" type="Area2D"]
script = ExtResource("1_lpres")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
